Update template_report.html, base_template.html, base_template_dinamic.html, and 1 more file

--- a/mainsequence/reportbuilder/base_templates/base_template_old.html
+++ b/mainsequence/reportbuilder/base_templates/base_template_old.html
@@ -1,347 +1,1 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-  <meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>{{ title }}</title>
-  <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"></script>
-  <style>
-    body,html{margin:0;padding:0;width:100%;background:#e0e0e0;font-family:{{ font_family }};}
-
-    body {
-      display: flex; flex-direction: column; align-items: center;
-      min-height: 100vh; padding-top: 20px; padding-bottom: 80px;
-      transition: padding 0.3s ease, background 0.3s ease;
-      box-sizing: border-box;
-    }
-    #slidesContainer {
-      width: 100%; display: flex; flex-direction: column; align-items: center;
-    }
-    .slide{
-      position:relative; display:flex; flex-direction:column; overflow:hidden; box-sizing:border-box;
-      width:338.667mm; height:190.5mm; /* Original 16:9 A4 Landscape base */
-      padding:7mm; page-break-after:always; background:#f8f9fa;
-      margin-bottom: 10mm; box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      transition: width 0.3s ease, height 0.3s ease, margin 0.3s ease, box-shadow 0.3s ease, padding 0.3s ease, transform 0.3s ease;
-    }
-    .slide-header,.slide-footer{
-      left:15mm; right:15mm; display:flex; justify-content:space-between; align-items:center; z-index: 10;
-    }
-    .slide-header{top:5mm;} .slide-footer{bottom:5mm;font-size:0.85em;color:#555;}
-    .slide-body{
-      flex:1; display:flex; flex-direction:column;
-      justify-content: center; align-items: center; text-align: center;
-      overflow: auto; z-index: 5; position: relative; transition: all 0.3s ease;
-    }
-    .slide-logo img { max-height: 30px; width: auto; }
-
-    html { font-size: 20px; }
-
-    /* --- Responsive Typography for TextElements --- */
-    .text-element { /* Common properties if any, e.g., line-height */
-      line-height: 1.5;
-      margin: 0.5em 0; /* Default vertical rhythm */
-    }
-    .text-element-h1, .slide-title {
-      font-size: 2rem;
-      font-weight: bold;
-      line-height: 1.2;
-      margin: 0.2em 0;
-    }
-    .text-element-h2 {
-      font-size: 1.75rem;
-      font-weight: bold;
-      line-height: 1.3;
-      margin: 0.2em 0;
-    }
-    .text-element-h3 {
-      font-size: 1.5rem;
-      font-weight: bold;
-      line-height: 1.4;
-      margin: 0.2em 0;
-    }
-    .text-element-h4 {
-      font-size: 1.25rem;
-      font-weight: normal;
-      line-height: 1.4;
-      margin: 0.2em 0;
-    }
-    .text-element-h5 { font-size: 1.1rem; font-weight: bold; margin: 0.05em 0;}
-    .text-element-h6 { font-size: 1rem; font-weight: bold; margin: 0.05em 0;}
-    .text-element-p { font-size: 0.9rem; margin: 0.05em 0;}
-
-    /* === Vertical Image Slide === */
-    .vertical-image-slide {
-      --left: 20%; --right: 80%; display: flex; flex-direction: row; padding: 0;
-    }
-    .vertical-image-slide .left-column {
-      width: var(--left); padding: 15mm; padding-right: 0; display: flex; flex-direction: column; overflow: hidden;
-    }
-    .vertical-image-slide .left-column .slide-body { flex: 1; }
-    .vertical-image-slide .left-column .slide-footer { margin-top: auto; }
-    .vertical-image-slide .right-column { width: var(--right); padding: 0; margin: 0; display: flex; overflow: hidden; }
-    .vertical-image-slide .right-column img { width: 100%; height: 100%; object-fit: cover; display: block; }
-    .vertical-image-slide .slide-header, .vertical-image-slide .slide-footer {
-      position: relative !important; left: auto; right: auto; top: auto; bottom: auto; margin: 0 0 0.5em; justify-content: space-between;
-    }
-
-    #buttonContainer { position: fixed; bottom: 20px; right: 20px; z-index: 1050; /* Ensure buttons above fullscreen */ display: flex; gap: 10px; }
-    #exportPdfButton, #playButton { padding: 10px 20px; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; box-shadow: 0 2px 4px rgba(0,0,0,0.2); transition: background-color 0.2s ease; display: flex; justify-content: center; align-items: center; }
-    #exportPdfButton { background-color: #007bff; } #exportPdfButton:hover { background-color: #0056b3; }
-    #playButton { background-color: #28a745; width: 50px; height: 40px; padding: 10px; font-size: 1.2rem; } #playButton:hover { background-color: #218838; }
-
-    /* --- Fullscreen Mode Styles --- */
-    body.fullscreen-mode {
-      padding: 0; display: block; background: #333;
-      overflow: hidden; /* Hide body scroll, only container scrolls */
-      height: 100vh;
-    }
-    body.fullscreen-mode #slidesContainer {
-       width: 100%; height: 100vh;
-       overflow-y: scroll; /* Scroll the container */
-       scroll-snap-type: y mandatory; /* Enable snap scrolling */
-       padding: 0; display: block; /* Change from flex to block */
-    }
-    /* The Wrapper (Added via JS) */
-    .fullscreen-wrapper {
-        width: 100vw;
-        height: 100vh; /* Each wrapper is full height */
-        scroll-snap-align: start; /* Snap here */
-        display: flex; /* Use flex to center the .slide inside */
-        justify-content: center;
-        align-items: center;
-        background: #333; /* Dark background */
-        box-sizing: border-box;
-    }
-    /* The Slide when inside the Wrapper */
-    body.fullscreen-mode .slide {
-        width: 90vw;
-        height: calc(90vw / (338.667 / 190.5)); /* Maintain original ratio */
-        aspect-ratio: 338.667 / 190.5;
-        max-width: 1600px;
-        max-height: 90vh; /* Max height */
-
-        margin-bottom: 0; /* Override default margin */
-        box-shadow: 0 0 30px rgba(0,0,0,0.7); /* Add nice shadow */
-        page-break-after: unset;
-        border-radius: 8px; /* Optional: rounded corners */
-        overflow: hidden; /* Crucial: Keep overflow hidden */
-        /* --- WE LET ORIGINAL STYLES (background, padding, display, etc.) APPLY --- */
-    }
-    /* Ensure internal elements like body still behave */
-    body.fullscreen-mode .slide .slide-body {
-        overflow: auto; /* Ensure body can scroll if its content overflows */
-    }
-
-    @media (max-width: 768px) { /* Target tablets and mobile phones. Adjust breakpoint as needed. */
-      html { font-size: 16px; }
-      .slide-logo img { max-height: 20px; width: auto; }
-
-      /* --- Plotly specific styles for scrolling (General) --- */
-      div[id^="elem_"]{
-          max-width:100%;                 /* never overflow its grid cell            */
-          overflow-x:auto;                /* provides the scrollbar on phones        */
-          -webkit-overflow-scrolling:touch;
-      }
-      .slide-grid {
-        grid-template-columns: minmax(0, 1fr) !important;
-        grid-template-rows: auto !important;
-      }
-
-      .slide-grid > div {
-        grid-column: 1 / -1 !important;
-        grid-row: auto !important;
-      }
-
-      .slide-grid > div:has(.plotly-graph-div) { /* This is the GridCell's wrapper div, applies only if it contains a Plotly graph */
-        justify-self: stretch !important; /* CRITICAL: Override inline justify-self for mobile to ensure it fills the column */
-      }
-
-      .slide {
-        width: 95vw !important;
-        height: auto !important;
-        padding: 3vw !important;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 15px;
-        overflow: hidden; /* Will clip horizontal overflow; vertical growth is allowed by height:auto */
-        display: flex;
-        flex-direction: column;
-      }
-      .slide-body {
-        overflow-y: auto;
-        overflow-x: hidden;
-        -webkit-overflow-scrolling: touch;
-      }
-      .slide-header, .slide-footer {
-        left: 3vw !important;
-        right: 3vw !important;
-      }
-      .slide-header {
-        top: 1.5vw !important;
-      }
-      .slide-footer {
-        bottom: 1.5vw !important;
-      }
-
-      .vertical-image-slide {
-        flex-direction: column-reverse !important; /* Stack image (.right-column) on top of text (.left-column) */
-      }
-
-      .vertical-image-slide .left-column,
-      .vertical-image-slide .right-column {
-        width: 100% !important;
-        max-width: 100% !important; /* Ensure it doesn't overflow container */
-        /* height will be auto by default or set specifically below */
-      }
-
-      .vertical-image-slide .left-column {
-        padding: 2.5vw !important; /* Consistent padding on all sides for the text content block */
-        height: auto !important; /* Ensure height is determined by content */
-      }
-
-      .vertical-image-slide .right-column {
-        padding: 0 !important; /* Image container should have no padding */
-        margin: 0 !important; /* Reset any margins */
-        height: auto;         /* Height of this container is determined by the image */
-      }
-
-      .vertical-image-slide .right-column img {
-        /* width: 100% is set by inline style and is appropriate */
-        height: auto !important; /* CRITICAL: Override inline style 'height:100%'
-                                        to allow image to set its own height based on aspect ratio. */
-        display: block; /* Ensure proper block rendering for the image */
-      }
-      /* Mobile Plotly specific styling */
-      .js-plotly-plot .cell-text { /* Keep mobile-specific font size for table cells */
-          font-size: 9px !important;
-      }
-
-      body.fullscreen-mode .slide {
-        width: 95vw !important;         /* Consistent width for mobile */
-        height: auto !important;         /* Allow height to adjust to content */
-        aspect-ratio: unset !important;  /* Override fixed aspect ratio from general fullscreen style */
-        max-height: none !important;     /* Override max-height constraint from general fullscreen style */
-        margin-bottom: 0 !important;     /* Maintain fullscreen margin behavior */
-      }
-
-      body.fullscreen-mode .slide .slide-body {
-          /* Ensure consistent scroll behavior for slide content in mobile fullscreen */
-          overflow-y: auto !important;
-          overflow-x: hidden !important;
-          -webkit-overflow-scrolling: touch;
-      }
-
-      .slide-logo {
-        display: none !important;
-      }
-      #playButton {
-        display: none !important;
-      }
-    }
-
-    @media (max-width: 480px) {
-        html {
-            font-size: 12px;
-        }
-    }
-    /* --- Print Styles --- */
-    @media print {
-      body, html { background: #fff; }
-      body { display: block; padding-top: 0; padding-bottom: 0; }
-      .slide { margin-bottom: 0; box-shadow: none; width:338.667mm !important; height:190.5mm !important; }
-      #buttonContainer { display: none; }
-      @page { size: A4 landscape; margin: 0; }
-    }
-
-    /* Hide PDF button for now */
-    #pdfOption {
-      display: none;
-    }
-
-    #menuButton {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-  <div id='slidesContainer'>{{ slides|safe }}</div>
-
-  <div id="buttonContainer">
-      <button id="playButton" title="Toggle Fullscreen View"><i class="bi bi-play-fill"></i></button>
-         <!-- Hamburger Menu Dropdown -->
-     <div class="dropdown">
-      <button
-        class="btn btn-primary dropdown-toggle"
-        type="button"
-        id="menuButton"
-        data-bs-toggle="dropdown"
-        aria-expanded="false">
-        <i class="bi bi-list"></i>
-      </button>
-      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="menuButton">
-        <li><a class="dropdown-item" href="#" id="pdfOption">Export to PDF</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <script>
-
-    document.getElementById('pdfOption').addEventListener('click', function() {
-  window.print();
-});
-    const playButton = document.getElementById('playButton');
-    const body = document.body;
-    const slidesContainer = document.getElementById('slidesContainer');
-    let isFullscreen = false;
-
-    const playIcon = '<i class="bi bi-play-fill"></i>';
-    const stopIcon = '<i class="bi bi-stop-fill"></i>';
-
-    function wrapSlides() {
-        document.querySelectorAll('.slide:not(.wrapped)').forEach(slide => {
-            const wrapper = document.createElement('div');
-            wrapper.className = 'fullscreen-wrapper';
-            slide.parentNode.insertBefore(wrapper, slide);
-            wrapper.appendChild(slide);
-            slide.classList.add('wrapped'); // Mark as wrapped
-        });
-    }
-
-    function unwrapSlides() {
-        document.querySelectorAll('.fullscreen-wrapper').forEach(wrapper => {
-            const slide = wrapper.querySelector('.slide');
-            if (slide) {
-                wrapper.parentNode.insertBefore(slide, wrapper);
-                slide.classList.remove('wrapped');
-            }
-            wrapper.remove();
-        });
-    }
-
-    playButton.addEventListener('click', function() {
-      isFullscreen = !isFullscreen;
-      body.classList.toggle('fullscreen-mode', isFullscreen);
-
-      if (isFullscreen) {
-        wrapSlides(); // Wrap slides on entering fullscreen
-        playButton.innerHTML = stopIcon;
-        playButton.title = 'Exit Fullscreen View';
-        playButton.style.backgroundColor = '#dc3545';
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      } else {
-        unwrapSlides(); // Unwrap slides on exiting fullscreen
-        playButton.innerHTML = playIcon;
-        playButton.title = 'Toggle Fullscreen View';
-        playButton.style.backgroundColor = '#28a745';
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      }
-    });
-
-  </script>
-</body>
-</html>
+e-slide .slide-footer { position: relative !important; left: auto; right: auto; top: auto; bottom: auto; margin: 0 0 0.5em; justify-content: space-between; }
